--- a/web/menu.html
+++ b/web/menu.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <nav id="menu" class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -8,7 +9,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-left">
             <li><a href="#.jsp" id="btnTopTen" >Top 10</a></li>
-            <li><a href="#.jsp"id="btnFavQuestion" >Perguntas Favoritas</a></li>
+            <li><a href="#.jsp" id="btnFavQuestion" >Perguntas Favoritas</a></li>
         </ul>
     </div>
 </nav>
