--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
                     <a class="navbar-brand home" >Quiz</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="home ajax" href="">Home</a></li>
+                    <li class="active"><a class="" href="">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="" id="btnTopTen" >Top 10</a></li>
